# Zaprust

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  PACKAGE_README.txt  README.md  build.rs
.github/workflows/: release.yml
docs/: LINUX.md  deviations.md  icons-design-prompt.md
packaging/linux/: README.md  build-appimage.sh  dev.zaprust.policy  zaprust.desktop
src/: bat.rs  config.rs  logging.rs  main.rs  strategies.rs  updater.rs
src/platform/: mod.rs
src/platform/linux/: desktop.rs  elevate.rs  mod.rs  nft.rs  runtime.rs  service.rs  status.rs  strategy.rs  tester.rs
src/platform/windows/: elevate.rs  mod.rs  runtime.rs  service.rs  strategy.rs  sys.rs  tester.rs
zaprust/: .gitignore  Cargo.toml  PACKAGE_README.txt
zaprust/src/: config.rs  logging.rs  main.rs  service.rs  strategies.rs  updater.rs
