[package]
name = "zaprust"
version = "0.1.0"
edition = "2021"
description = "Lightweight native GUI over Flowseal/zapret-discord-youtube for managing DPI bypass"

[dependencies]
eframe = "0.29"
egui = "0.29"
# Тест доступности доменов. native-tls на Windows = SChannel (встроенный TLS,
# без сборки C/ring) — легче rustls и надёжнее на gnu-toolchain.
ureq = { version = "2", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
# Распаковка релизного архива ядра (только deflate — легко).
zip = { version = "0.6", default-features = false, features = ["deflate"] }
# Сохранение настроек.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
# Декодирование PNG-иконок интерфейса (только png — легко).
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.build-dependencies]
# Метаданные exe (иконка, версия, манифест) — только в release-сборке.
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
